Fixed a bug where total time would be cut off to single digit minute

--- a/css/style.css
+++ b/css/style.css
@@ -328,7 +328,7 @@ select.form-control {
 	font-size: 16px;
 }
 
-ol p {
+.guidecontainer p {
 	margin: 8px 0;
 }
 
